--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ pandas==0.24.2
 Pillow==6.0.0
 plumber==1.5
 protobuf==3.8.0
-psycopg2==2.8.2
+psycopg2-binary==2.8.6
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
 pyparsing==2.4.0
@@ -61,28 +61,15 @@ s3transfer==0.2.0
 scikit-learn==0.21.2
 scipy==1.3.0
 selenium==3.141.0
-setuptools==41.0.0
+setuptools==47.1.1
 six==1.11.0
 sklearn==0.0
 smart-open==1.8.3
 stop-words==2018.7.23
-tb-nightly==1.14.0a20190603
-tensorboard==1.14.0
-tensorflow==2.0.0b1
-tensorflow-estimator==1.14.0
 termcolor==1.1.0
-tf-estimator-nightly==1.14.0.dev2019060501
 ujson==1.35
 urllib3==1.25.3
 Wand==0.5.4
 webencodings==0.5.1
 Werkzeug==0.15.4
 wrapt==1.11.2
-zope.component==4.5
-zope.deferredimport==4.3
-zope.deprecation==4.4.0
-zope.event==4.4
-zope.hookable==4.2.0
-zope.interface==4.6.0
-zope.lifecycleevent==4.3
-zope.proxy==4.3.1
